--- a/.env.example
+++ b/.env.example
@@ -8,5 +8,5 @@
 # server with the `prisma dev` CLI command, when not choosing any non-default ports or settings. The API key, unlike the 
 # one found in a remote Prisma Postgres URL, does not contain any sensitive information.
 PORT=6123
-DATABASE_URL=" "
+DATABASE_URL="example"
 
