[수정] 그룹 추천/배지/참여 관리 기능 구현

--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "author": "",
   "type": "module",
   "main": "index.js",
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint .",
@@ -13,6 +16,8 @@
   },
   "dependencies": {
     "@prisma/client": "^6.13.0",
+    "@types/bcryptjs": "^2.4.6",
+    "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
