--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "eslint-plugin-prettier": "^5.5.4",
     "express": "^5.1.0",
     "morgan": "^1.10.1",
-    "prisma": "^6.13.0"
+    "prisma": "^6.13.0",
+    "multer": "^2.0.2",
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
@@ -44,13 +46,25 @@
     "@typescript-eslint/eslint-plugin": "^8.39.1",
     "@typescript-eslint/parser": "^8.39.1",
     "eslint": "^9.33.0",
-    "eslint-plugin-react": "^7.37.5",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
     "globals": "^16.3.0",
     "nodemon": "^3.1.10",
     "supertest": "^7.1.4",
     "tsx": "^4.20.4",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.39.1",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "prettier": "3.6.2"
+  },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown",
+    "*.prisma": [
+      "npx prisma format"
+    ],
+    "*.{ts,tsx,js,json,md,yaml}": [
+      "prettier --write",
+      "eslint --fix"
+    ]
   }
 }
