--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,3 @@
-// tsconfig.json
-
 {
   "compilerOptions": {
     "target": "ES2022",
@@ -14,7 +12,16 @@
     "forceConsistentCasingInFileNames": true,
     "rootDir": "src",
     "outDir": "dist",
-    "types": ["node", "vitest"] // vitest 안 쓰면 ["node"]만 두세요
+    "types": ["node", "vitest"], // vitest 안 쓰면 ["node"]만 두세요
+    "allowJs": true, // js 파일들 ts에서 import해서 쓸 수 있는지
+    "checkJs": true, // 일반 js 파일에서도 에러체크 여부
+    "strictNullChecks": true, //null, undefined 타입에 이상한 짓 할시 에러내기
+    "strictFunctionTypes": true, //함수파라미터 타입체크 강하게
+    "strictPropertyInitialization": true, //class constructor 작성시 타입체크 강하게
+    "noUnusedParameters": true, //쓰지않는 파라미터 있으면 에러내기
+    "noUnusedLocals": true, //쓰지않는 지역변수 있으면 에러내기
+    "noImplicitReturns": true, //함수에서 return 빼먹으면 에러내기
+    "noFallthroughCasesInSwitch": true //switch문 이상하면 에러내기
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/tests/**/*.ts"],
   "exclude": ["node_modules", "dist"]
