--- a/package.json
+++ b/package.json
@@ -16,16 +16,16 @@
     "test": "vitest --config vitest.config.ts",
     "test:run": "vitest run --config vitest.config.ts",
     "lint": "eslint .",
-    "format": "prettier --write .",
-    "dev": "nodemon --exec tsx src/app.ts",
-    "start": "node dist/app.js",
-    "build": "tsc"
+    "format": "prettier --write ."
   },
   "dependencies": {
+    "@apidevtools/swagger-parser": "^12.0.0",
     "@prisma/client": "^6.13.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
+    "bcrypt": "^6.0.0",
+    "js-yaml": "^4.1.0",
     "swagger-ui-express": "^5.0.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
@@ -45,9 +45,12 @@
     "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.39.1",
     "@typescript-eslint/parser": "^8.39.1",
+    "@types/bcrypt": "^6.0.0",
+    "@types/js-yaml": "^4.0.9",
+    "@types/multer": "^2.0.0",
+    "@types/swagger-ui-express": "^4.1.8",
     "eslint": "^9.33.0",
     "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-prettier": "^5.5.4",
     "globals": "^16.3.0",
     "nodemon": "^3.1.10",
     "supertest": "^7.1.4",
