--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   },
   "dependencies": {
     "@prisma/client": "^6.13.0",
-    "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.1",
     "eslint-config-prettier": "^10.1.8",
@@ -26,6 +25,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/express": "^5.0.3",
     "@typescript-eslint/eslint-plugin": "^8.39.1",
     "@typescript-eslint/parser": "^8.39.1",
     "eslint": "^9.33.0",
