--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@prisma/client": "^6.13.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "@types/bcryptjs": "^2.4.6",
     "dotenv": "^17.2.1",
     "bcrypt": "^6.0.0",
     "js-yaml": "^4.1.0",
@@ -51,6 +52,7 @@
     "@types/swagger-ui-express": "^4.1.8",
     "eslint": "^9.33.0",
     "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
     "globals": "^16.3.0",
     "nodemon": "^3.1.10",
     "supertest": "^7.1.4",
