--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "test": "vitest --config vitest.config.ts",
     "test:run": "vitest run --config vitest.config.ts",
     "lint": "eslint .",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
   },
   "dependencies": {
     "@apidevtools/swagger-parser": "^12.0.0",
-    "@prisma/client": "^6.13.0",
+    "@prisma/client": "^6.14.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "@types/bcryptjs": "^2.4.6",
