--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,11 @@
     "noUnusedParameters": true, //쓰지않는 파라미터 있으면 에러내기
     "noUnusedLocals": true, //쓰지않는 지역변수 있으면 에러내기
     "noImplicitReturns": true, //함수에서 return 빼먹으면 에러내기
-    "noFallthroughCasesInSwitch": true //switch문 이상하면 에러내기
+    "noFallthroughCasesInSwitch": true, //switch문 이상하면 에러내기
+    "baseUrl": "./src",
+    "paths": {
+      "@/*": ["*"] 
+    }
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/tests/**/*.ts"],
   "exclude": ["node_modules", "dist"]
