--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,9 +22,9 @@
     "noUnusedLocals": true, //쓰지않는 지역변수 있으면 에러내기
     "noImplicitReturns": true, //함수에서 return 빼먹으면 에러내기
     "noFallthroughCasesInSwitch": true, //switch문 이상하면 에러내기
-    "baseUrl": "./src",
+    "baseUrl": "src",
     "paths": {
-      "@/*": ["*"] 
+      "@/*": ["./*"]
     }
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/tests/**/*.ts"],
