--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "lint-staged": "^16.1.5",
     "prettier": "3.6.2",
     "supertest": "^7.1.4",
+    "tsc-alias": "^1.8.16",
     "tsx": "^4.20.4",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.39.1",
