--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "forceConsistentCasingInFileNames": true,
     "rootDir": "src",
     "outDir": "dist",
-    "types": ["node"], // vitest 안 쓰면 ["node"]만 두세요
+    "types": ["node", "vitest"], // vitest 안 쓰면 ["node"]만 두세요
     "allowJs": true, // js 파일들 ts에서 import해서 쓸 수 있는지
     "checkJs": true, // 일반 js 파일에서도 에러체크 여부
     "strictNullChecks": true, //null, undefined 타입에 이상한 짓 할시 에러내기
