--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -34,6 +34,6 @@ jobs:
             git fetch --all --tags
             git reset --hard
             git checkout ${{ github.ref_name }}
-            npm install
+            npm ci
             npm run build
             pm2 restart codeit-team-project-1 || pm2 start dist/index.js --name codeit-team-project-1
