--- a/src/swagger/tags/index.yaml
+++ b/src/swagger/tags/index.yaml
@@ -1,4 +1,8 @@
 - name: 그룹
   description: '그룹 관련 API'
+- name: 운동 기록
+  description: '운동 기록 관련 API'
+- name: 타이머
+  description: '운동 시간 측정을 위한 타이머 API'
 - name: 업로드
   description: '파일 업로드 관련 API'
