--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -23,7 +23,16 @@ jobs:
           npm install
           npm run build
 
-      - name: Deploy to EC2
+      - name: Copy build files to EC2
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          source: 'dist/* package.json package-lock.json'
+          target: '/home/ubuntu/codeit-team-project-1/nb4-seven-team6'
+
+      - name: Restart app on EC2
         uses: appleboy/ssh-action@v1.2.2
         with:
           host: ${{ secrets.EC2_HOST }}
@@ -31,9 +40,5 @@ jobs:
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
             cd /home/ubuntu/codeit-team-project-1/nb4-seven-team6
-            git fetch --all --tags
-            git reset --hard
-            git checkout ${{ github.ref_name }}
-            npm ci
-            npm run build
+            npm ci --omit=dev  
             pm2 restart codeit-team-project-1 || pm2 start dist/index.js --name codeit-team-project-1
