--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -29,7 +29,7 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
-          source: 'dist/* package.json package-lock.json'
+          source: 'dist/** package.json package-lock.json'
           target: '/home/ubuntu/codeit-team-project-1/nb4-seven-team6'
 
       - name: Restart app on EC2
