--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -20,8 +20,11 @@ jobs:
 
       - name: Install dependencies & build
         run: |
-          npm install
+          npm ci
           npm run build
+
+      - name: Check build output
+        run: ls -R dist || echo "dist not found"
 
       - name: Copy build files to EC2
         uses: appleboy/scp-action@v0.1.7
@@ -29,7 +32,10 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
-          source: 'dist/** package.json package-lock.json'
+          source: |
+            dist/**
+            package.json
+            package-lock.json
           target: '/home/ubuntu/codeit-team-project-1/nb4-seven-team6'
 
       - name: Restart app on EC2
@@ -40,5 +46,5 @@ jobs:
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
             cd /home/ubuntu/codeit-team-project-1/nb4-seven-team6
-            npm ci --omit=dev  
+            npm ci --omit=dev
             pm2 restart codeit-team-project-1 || pm2 start dist/index.js --name codeit-team-project-1
