--- a/package.json
+++ b/package.json
@@ -6,9 +6,6 @@
   "author": "",
   "type": "module",
   "main": "index.js",
-  "prisma": {
-    "seed": "ts-node prisma/seed.js"
-  },
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "tsc && tsc-alias",
@@ -18,7 +15,8 @@
     "lint": "eslint .",
     "format": "prettier --write .",
     "prepare": "husky",
-    "seed": "prisma db seed"
+    "seed": "node prisma/seed.js",
+    "mock": "node prisma/mock_data.js"
   },
   "dependencies": {
     "@apidevtools/swagger-parser": "^12.0.0",
